# Quack-Compiler

./: ASTNode.cpp  ASTNode.h  Makefile  README.md  clean.sh  generateast.sh  lex_driver.cpp  names.h  qcc  quack.lxx  type checking steps.txt
project0/: quack.lxx
project0/samples/: Pt.qk  cow.qk  robot.qk
project1/: CMakeLists.txt  quack.lxx  quack.tab.hxx
project1/samples/: bad_break.qk  test.qk
project2/: Makefile  quack.lxx  quack.yxx  test.txt
project2/etc/: Makefile
project2/samples/: test.qk
project2/src/: CMakeLists.txt  parser.cpp  quack.yxx
project3/: ASTEnum.h  ASTNode(YOUNG).cpp  ASTNode.cpp  ASTNode.h  ASTTester.cpp  clean.sh  parser.cpp  quack.yxx  test.txt
project3/etc/: Makefile
project3/references/: ASTNode(YOUNG).h
project3/samples/: hands.qk
project3/src/: ASTEnum.h  ASTNode.h  CMakeLists.txt  Messages.cpp  parser.cpp  quack.yxx
project4/: Pt.json  PtYoung.json  build.sh  clean.sh  generateast.sh  parser  stmts.dot  stmts.json  type checking steps.txt
project4/samples/: !generateasts.sh  GoodWalk.qk  LexChallenge.qk  Pt2.qk  README.md  Sqr.qk  SqrDecl.qk  bad_break.qk  bad_class.qk  bad_class_params.qk  bad_duplicate_class.qk  bad_method_field_duplicate.qk  circular_dependency.qk  controlflow.qk  dense_if_good.qk  duplicate_class.qk  duplicate_method.qk  good_typecase.qk  hands.qk  hierarchy.qk  (+31 more)
project4/src/: ASTEnum.h  ASTNode.cpp  ASTNode.h  ASTTester.cpp  CMakeLists.txt  CodegenContext.h  Messages.cpp  Messages.h  Pt2.json  driver.cpp  hands.dot  parser.cpp  quack.lxx  quack.yxx  stubs.h  typechecker.cpp  typechecker.h
samples/: .gitignore  Pt.qk  Pt_missing_fields.qk  adv_constructor_init.qk  all_tests.csv  bad_class_and_method_match2.qk  bad_class_params.qk  bad_duplicate_class.qk  bad_return_only_if_true.qk  bad_true_false.qk  bad_typecase_invalid_type.qk  bad_typecase_recast.qk  bad_uninit_field.qk  circular_dependency.qk  dense_if_good.qk  good_GoodWalk.qk  good_Pt2.qk  good_add_return_none.qk  good_adv_constructor_init.qk  good_control_flow.qk  good_inherited_method_check.qk  good_simple_if_and_short_circuit.qk  good_simple_int_math_and_bool.qk  good_simple_overridingmethod.qk  good_simple_unary_negation.qk  good_simple_while_and_sugar.qk  good_the_kitchen_sink.qk  good_this_is_string.qk  hands.qk  if_false_init.qk  if_true_init.qk  invalid_super_type.qk  simple_classes_tree_bad_nosuchsuper.qk  simple_overridingmethod_bad_numberargs.qk  simple_tree_good_anyorder.qk  small_main.qk  sort.qk  subclass_method_return_mismatch.qk  unknown_return_type.qk
scripts/: generateast.sh  invoke_gcc.sh
src/: ASTEnum.h  ASTNode.cpp  ASTNode.h  Builtins.c  Builtins.h  CMakeLists.txt  Makefile  Messages.cpp  Messages.h  codegen.cpp  codegen.h  driver.cpp  quack.lxx  quack.yxx  stubs.h  typechecker.cpp  typechecker.h
(+76 files in other folders)
